--- a/build
+++ b/build
@@ -2,5 +2,6 @@
 
 xa -l toc -o ./vic/wax2.bin ./src/wax2.asm
 printf "\x00\xa0" | cat - ./vic/wax2.bin > ./vic/wax2.prg
+cat ./vic/wax2.bin ./src/padding.bin | head -c 8192 > ./vic/wax2.eep
 cp ./vic/wax2.prg ~/vic20/wax2
 
