Update wAxfer progress, add value query for =

--- a/build
+++ b/build
@@ -5,3 +5,7 @@ printf "\x00\xa0" | cat - ./vic/wax2.bin > ./vic/wax2.prg
 cat ./vic/wax2.bin ./src/padding.bin | head -c 8192 > ./vic/wax2.eep
 cp ./vic/wax2.prg ~/vic20/wax2
 
+## Build test suite
+petcat -w2 -o vic/wax2test.prg -- tests/wax2test.bas
+cp ./vic/wax2test.prg ~/vic20/wax2test
+
