--- a/build
+++ b/build
@@ -6,6 +6,6 @@ cat ./vic/wax2.bin ./src/padding.bin | head -c 8192 > ./vic/wax2.eep
 cp ./vic/wax2.prg ~/vic20/wax2
 
 ## Build test suite
-petcat -w2 -o vic/wax2test.prg -- tests/wax2test.bas
-cp ./vic/wax2test.prg ~/vic20/wax2test
+petcat -w2 -o vic/wax2test.prg -- src/wax2test.bas
+cp ./vic/wax2test.prg ~/vic20/
 
