--- a/build
+++ b/build
@@ -3,14 +3,14 @@
 xa -l toc -o ./vic/wax2.bin ./src/wax2.asm
 printf "\x00\xa0" | cat - ./vic/wax2.bin > ./vic/wax2.prg
 cat ./vic/wax2.bin ./src/padding.bin | head -c 8192 > ./vic/wax2.eep
-cp ./vic/wax2.prg ~/vic20/wax2
+cp ./vic/wax2.prg /Users/jej/personal/vic/wax2
 
 ## Make CRT file
-/Applications/vice-x86-64-gtk3-3.6.2-dev-r41706/bin/cartconv -t vic20 -i ./vic/wax2.eep -o ./vic/wax2.crt -l 0xa000
+/Applications/vice-x86-64-gtk3-3.6.1/bin/cartconv -t vic20 -i ./vic/wax2.eep -o ./vic/wax2.crt -l 0xa000
 
 ## Build test suite
-petcat -w2 -o vic/wax2test.prg -- src/wax2test.bas
-cp ./vic/wax2test.prg ~/vic20/
+/Applications/vice-x86-64-gtk3-3.6.1/bin/petcat -w2 -o vic/wax2test.prg -- src/wax2test.bas
+cp ./vic/wax2test.prg /Users/jej/personal/vic/
 
 ls -la ./vic/wax2.bin
 
